add support for steps (aka bullet points appearing one by one

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h1>El poder, la maldad, el heavy puede controlar</h1>
             <p>armado con su robot: ¡Mazinger! Mazinger es: </p>
             <ul>
-                <li>Heavy,</li>
-                <li>Es metálico</li>
-                <li>Es una fuuuuria</li>
+                <li class="md-step">Heavy,</li>
+                <li class="md-step">Es metálico</li>
+                <li class="md-step">Es una fuuuuria</li>
             </ul>
         </section>
         <section>
