fixed code example

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 
         <section>
             <h1>Some code here</h1>
-            <pre><code class="js">
-            window.onload = function () {
-                console.log('hola mundo');
-            }
-            </code></pre>
+            <pre><code class="js">window.onload = function () {
+    console.log('hola mundo');
+};
+</code></pre>
         </section>
     </article>
 
